--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url= jdbc:mysql://127.0.0.1:3306/EmployeeManagementDb
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url= jdbc:mysql://127.0.0.1:3306/EmployeeManagementDb
+#spring.datasource.username=root
+#spring.datasource.password=root
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
